--- a/HomepageHotel.html
+++ b/HomepageHotel.html
@@ -15,7 +15,7 @@
             <li><a class="active" href="HomepageHotel.html">Home</a></li>
             <li><a href="CamereHotel.html">Le nostre camere</a></li>
             <li><a href="ContattiHotel.html">Contatti</a></li>
-            <li><button id="logOutButton" disabled onclick="logOut()">Esci</button></li>
+            <li><button id="logOutButton" onclick="logOut()">Esci</button></li>
         </ul>
     </nav>
 
